# DNA-Sequence-Classifier

./: Documentation.html  README.md  evaluate.py  run.py
Code/: .gitignore  1-dataset_analysis.ipynb  2-pre-processing.ipynb  3-model.ipynb  4-model_assessment.ipynb  analysis.ipynb  config.json
Code/C++ Model/: save_test_set.py
Code/C++ Model/Code/: CMakeLists.txt  main.cpp  pre-processing.cpp
Code/C++ Model/Code/data/: c++_model.txt
Code/C++ Model/DNA Sequence Classifier/: CMakeLists.txt  main.cpp
Code/C++ Model/DNA Sequence Classifier/lib/fdeep/: import_model.hpp
Code/C++ Model/keras_export/: convert_model.py
Code/Fixed Point Model/: model.ipynb
Code/model/: keras_metadata.pb  saved_model.pb
Code/model/variables/: variables.index
Datasets/: modify_dataset.ipynb
Docs/: Documentation.html
Saved Data/: clean.py
Saved Data/Model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Saved Data/Model Architecture/: model.h5
Saved Data/Model/variables/: variables.data-00000-of-00001  variables.index
Saved Data/Predicted Labels/: c++_model.txt  compare.py  python_model.txt
Saved Data/Temp Data/: python_model.json
Saved Data/Test Set/: X_test.npy  save_test_set.py  y_test.npy
Saved Data/Training Set/: labels.npy
